# Agetn_docs

./: .dockerignore  .env.example  .gitignore  AUTHORS  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/agents/: accountant.yaml  general.yaml  lawyer.yaml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/routers/: analyze.py  docs_route.py  documents_route.py  export_route.py  generate.py  import_docx.py  util_route.py  workspace_route.py
backend/app/services/: agents_loader.py  companies_loader.py  deepseek.py  docs_scanner.py  document_storage.py  export_docx.py  export_pdf.py  money_ru.py  rag_service.py  requirements_loader.py  workspace.py
data/: checklist.json  requirements.md
data/workspace/.example/: README.md  companies.yaml  requirements.md  settings.yaml
data/workspace/.example/agents/: README.md
data/workspace/.example/samples/: README.md
data/workspace/.example/templates/contracts/: demo_supply.html.j2
frontend/: index.html  package-lock.json  package.json
frontend/src/: AgentPanel.tsx  App.tsx  ContractEditor.tsx  DocumentsHome.tsx  EditorPage.tsx  NewDocumentModal.tsx  WizardForm.tsx  WorkspaceAgentsSection.tsx  WorkspaceChecklistSection.tsx  WorkspaceCompaniesSection.tsx  WorkspaceSettingsPage.tsx  api.ts  index.css
frontend/src/documents/: analyzeHistory.ts  store.ts
frontend/src/tiptap/: FontSize.ts  tableOfContents.ts
frontend/src/utils/: randomUUID.ts
templates/contracts/: services.html.j2  supply.html.j2
